# thrust-iterators

./: .clang-format  .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  README.md
m4/: CMakeLists.txt  applystencil1d.m4  applystencil2d.m4  applystencil3d.m4  celladjustrhs1d.m4  celladjustrhs2d.m4  celladjustrhs3d.m4  cellblocksmooth1d.m4  cellblocksmooth2d.m4  cellblocksmooth3d.m4  celldiffusionapply1d.m4  celldiffusionapply2d.m4  celldiffusionapply3d.m4  celldiffusionflux1d.m4  celldiffusionflux2d.m4  celldiffusionflux3d.m4  celldiffusionstencilcoeffs1d.m4  celldiffusionstencilcoeffs2d.m4  celldiffusionstencilcoeffs3d.m4  cellsetcorrectionbc1d.m4  cellsetcorrectionbc2d.m4  cellsetcorrectionbc3d.m4  cellsmooth1d.m4  cellsmooth2d.m4  cellsmooth3d.m4  copycoarsetofine.m4  nodediffusionapply1d.m4  nodediffusionapply2d.m4  nodediffusionapply3d.m4  nodediffusionflux1d.m4  nodediffusionflux2d.m4  nodediffusionflux3d.m4  nodediffusionstencilcoeffs1d.m4  nodediffusionstencilcoeffs2d.m4  nodediffusionstencilcoeffs3d.m4  pdat_m4arrdim1d.i  pdat_m4arrdim2d.i  pdat_m4arrdim3d.i  pdat_m4arrdim4d.i
scripts/: add_copyright.py
src/: CMakeLists.txt  cd_apply_1d.t.cpp  cd_apply_1d_cuda.hpp  cd_apply_2d.t.cpp  cd_apply_2d_cuda.hpp  cd_apply_3d.t.cpp  cd_apply_3d_cuda.hpp  cd_correct_bc_1d.t.cpp  cd_correct_bc_1d_cuda.hpp  cd_correct_bc_2d.t.cpp  cd_correct_bc_2d_cuda.hpp  cd_correct_bc_3d.t.cpp  cd_correct_bc_3d_cuda.hpp  cd_flux_1d.t.cpp  cd_flux_1d_cuda.hpp  cd_flux_2d.t.cpp  cd_flux_2d_cuda.hpp  cd_flux_3d.t.cpp  cd_flux_3d_cuda.hpp  cd_stencil_1d.t.cpp  cd_stencil_1d_cuda.hpp  cd_stencil_2d.t.cpp  cd_stencil_2d_cuda.hpp  cd_stencil_3d.t.cpp  cd_stencil_3d_cuda.hpp  cd_stencil_coeffs_1d.t.cpp  cd_stencil_coeffs_1d_cuda.cu  cd_stencil_coeffs_1d_cuda.hpp  coarse_to_fine.t.cpp  coarse_to_fine_cuda.hpp  coarse_to_fine_iterator.t.cpp  coarse_to_fine_iterator_test.hpp  dot_offset.t.cpp  dot_offset_test.hpp  forward_stencil_iterator.t.cpp  forward_stencil_test.hpp  lazy_vec.hpp  lazy_vec.t.cpp  ls_apply_st_3d.t.cpp  ls_apply_st_3d_cuda.hpp  (+26 more)
src/cuda/: cd_apply_1d_cuda.cpp  cd_apply_2d_cuda.cpp  cd_apply_3d_cuda.cpp  cd_correct_bc_1d_cuda.cpp  cd_correct_bc_2d_cuda.cpp  cd_correct_bc_3d_cuda.cpp  cd_stencil_1d_cuda.cpp  cd_stencil_2d_cuda.cpp  cd_stencil_3d_cuda.cpp  cd_stencil_coeffs_1d_cuda.cpp  cdf_1d_cuda.cpp  cdf_2d_cuda.cpp  cdf_3d_cuda.cpp  coarse_to_fine_cuda.cpp  coarse_to_fine_iterator.hpp  coarse_to_fine_iterator_test.cpp  dot_offset_test.cpp  forward_stencil_iterator.hpp  forward_stencil_iterator_test.cpp  iter_math.hpp  lazy_math.hpp  lazy_vec.cpp  ls_apply_st_3d_cuda.cpp  matrix_iterator_utils.hpp  matrix_traversal_iterator.hpp  matrix_utils.hpp  md_bounds.hpp  md_device_span.hpp  md_device_span_test.cpp  md_device_vector.hpp  md_lazy_vector.hpp  offset_iterator.hpp  offset_iterator_test.cpp  sliding_iterator.hpp  sliding_iterator_test.cpp  stencil_impl.hpp  stencil_proxy.hpp  submatrix_iterator.hpp  submatrix_iterator_test.cpp  traits.hpp  (+5 more)
